Add my picture to about

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,7 +12,7 @@
     <div class="main-content">
         {{>header}}
         <p>This site was created by me! I'm happy</p>
-        <img class="portrait" src="/img/me.png">
+        <img class="portrait" src="/img/IMG_1397.jpeg">
     </div>
     
     {{>footer}}
